--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/user/0/.base/fezeuyoe/home/Downloads/ojdbc6.jar"/>
+	<classpathentry kind="lib" path="/home/fye/Téléchargements/ojdbc6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
